# statig

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: README.md  basic.rs  blinky.rs  history.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/bench/: Cargo.toml
examples/bench/src/: main.rs
examples/blinky/: Cargo.toml
examples/blinky/src/: main.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs  state.rs  ui.rs
examples/history/: Cargo.toml
examples/history/src/: main.rs
examples/macro/async_bench/: Cargo.toml
examples/macro/async_bench/src/: main.rs
examples/macro/async_bench_complex/: Cargo.toml
examples/macro/async_bench_complex/src/: main.rs
examples/macro/async_blinky/: Cargo.toml
examples/macro/async_blinky/src/: main.rs
examples/macro/async_io/: Cargo.toml
examples/macro/async_io/src/: main.rs
examples/macro/barrier/: Cargo.toml
examples/macro/barrier/src/: main.rs
examples/macro/basic/: Cargo.toml
examples/macro/basic/src/: main.rs
examples/macro/basic_async/: Cargo.toml
examples/macro/basic_async/src/: main.rs
examples/macro/bench/: Cargo.toml
examples/macro/bench/src/: main.rs
examples/macro/bench_complex/: Cargo.toml
examples/macro/bench_complex/src/: main.rs
examples/macro/blinky/: Cargo.toml
examples/macro/blinky/src/: main.rs
examples/macro/calculator/: Cargo.toml
examples/macro/calculator/src/: main.rs  state.rs  ui.rs
examples/macro/custom_state/: Cargo.toml
examples/macro/custom_state/src/: main.rs
examples/macro/generics/: Cargo.toml
examples/macro/generics/src/: main.rs
examples/macro/history/: Cargo.toml
examples/macro/history/src/: main.rs
examples/macro/mocking_demo/: Cargo.toml
examples/macro/mocking_demo/src/: lib.rs
examples/no_macro/basic/: Cargo.toml
examples/no_macro/basic/src/: main.rs
examples/no_macro/bench/: Cargo.toml
examples/no_macro/bench/src/: main.rs
examples/no_macro/blinky/: Cargo.toml
examples/no_macro/blinky/src/: main.rs
examples/no_macro/blinky_async/: Cargo.toml
examples/no_macro/blinky_async/src/: main.rs
examples/no_macro/calculator/: Cargo.toml
examples/no_macro/calculator/src/: main.rs  state.rs  ui.rs
examples/no_macro/history/: Cargo.toml
examples/no_macro/history/src/: main.rs
macro/: Cargo.toml  build.rs
macro/src/: analyze.rs  codegen.rs  doc.rs  lib.rs  lower.rs  parse.rs
macro/src/doc_templates/: min_script.js  script.js  state_template.html  style.css
macro/src/visitors/: generic_candidates.rs  generic_param_visitor.rs  lifetime_visitor.rs  mod.rs
macro/tests/: my_test.rs
src/: lib.rs  vec.rs
stateful/: Cargo.toml
stateful/src/: lib.rs  state.rs  state_machine.rs  superstate.rs
stateful/tests/: discriminant.rs  external_context.rs  state_local_storage.rs  transition.rs  transition_macro.rs
stateful_derive/: Cargo.toml
stateful_derive/src/: lib.rs
statig/: Cargo.toml
statig/src/: inner.rs  into_state_machine.rs  lib.rs  outcome.rs  response.rs  state.rs  state_machine.rs  state_or_superstate.rs  superstate.rs
statig/src/awaitable/: inner.rs  into_state_machine.rs  mod.rs  state.rs  state_machine.rs  superstate.rs
statig/src/blocking/: inner.rs  into_state_machine.rs  mod.rs  state.rs  state_machine.rs  superstate.rs
statig/tests/: async_hooks.rs  async_state_machine.rs  async_transition.rs  async_transition_macro.rs  config_macro.rs  default.rs  discriminant.rs  external_context.rs  generics.rs  hooks.rs  response_test.rs  response_test_async.rs  serde.rs  state_local_storage.rs  state_local_storage_macro.rs  transition.rs  transition_macro.rs  ui_tests.rs
statig/tests/ui/: custom_state.rs  custom_state_derive_error.rs  custom_state_derive_error.stderr  doc_comments.rs  doc_comments_missing_lint.rs  doc_comments_missing_lint.stderr
tests/: stateful.rs  transition.rs  transition_macro.rs
