[workspace]
members = [
    # Core statig crates
    "statig",
    "macro",

    # Examples
    "examples/macro/basic",
    "examples/macro/blinky",
    "examples/macro/bench",
    "examples/macro/history",
    "examples/macro/calculator",
    "examples/macro/barrier",
    "examples/macro/bench_complex",
    "examples/macro/generics",
    "examples/macro/async_blinky",
    "examples/macro/async_io",
    "examples/macro/async_bench",
    "examples/macro/async_bench_complex",

    "examples/no_macro/basic",
    "examples/no_macro/blinky",
    "examples/no_macro/bench",
    "examples/no_macro/history",
    "examples/no_macro/calculator",
]

resolver = "2"
