[package]
name = "stateful"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Deloof"]
license = "MIT"
description = "Hierarchical state machines"
readme = "README.md"
repository = "https://github.com/mdeloof/stateful"
keywords = ["fsm", "hsm", "finite-state-machine", "hierarchical-state-machine"]

[dependencies]
stateful_macro = { path = "../macro", version = "0.1.0", optional = true }

[dev-dependencies]
heapless = "0.7"
unit-enum = { git = "https://github.com/mdeloof/unit-enum.git" }

[features]
macro = ["stateful_macro"]
