[package]
name = "statig"
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
authors = ["Maxim Deloof"]
license = "MIT"
description = "Hierarchical state machines for designing event-driven systems"
readme = "../README.md"
repository = "https://github.com/mdeloof/statig"
keywords = ["fsm", "hsm", "statechart", "embedded"]

[dependencies]
statig_macro = { path = "../macro", version = "0.2.0-beta", optional = true }

[dev-dependencies]
heapless = "0.7.16"
unit-enum = { git = "https://github.com/mdeloof/unit-enum.git" }

[features]
default = ["macro"]
macro = ["statig_macro"]
