[package]
name = "statig"
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
authors = ["Maxim Deloof"]
license = "MIT"
description = "Hierarchical state machines for designing event-driven systems"
readme = "../README.md"
repository = "https://github.com/mdeloof/statig"
keywords = ["fsm", "hsm", "statechart", "embedded"]

[dependencies]
statig_macro = { path = "../macro", version = "0.2.0-beta", optional = true }
serde = { version = "1.0.152", optional = true }

[dev-dependencies]
bincode = "1.3.3"
heapless = "0.7.16"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
unit-enum = { git = "https://github.com/mdeloof/unit-enum.git" }

[features]
default = ["macro"]
macro = ["statig_macro"]
serde = ["dep:serde"]
std = []
