[package]
name = "statig"
version = "0.4.0"
edition = "2021"
rust-version = "1.66"
authors = ["Maxim Deloof"]
license = "MIT"
description = "Hierarchical state machines for designing event-driven systems"
readme = "../README.md"
repository = "https://github.com/mdeloof/statig"
keywords = ["fsm", "hsm", "statechart", "state-machine", "embedded"]

[dependencies]
statig_macro = { path = "../macro", version = "0.4.0", optional = true }
serde = { version = "1.0.152", optional = true }
bevy_ecs = { version = "0.12.1", optional = true }


[dev-dependencies]
bincode = "1.3.3"
futures = { version = "0.3.26" }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
unit-enum = { git = "https://github.com/mdeloof/unit-enum.git" }
trybuild = "1.0.90"

[features]
default = ["macro"]
macro = ["statig_macro"]
serde = ["dep:serde"]
bevy = ["dep:bevy_ecs"]
async = []

[package.metadata.docs.rs]
all-features = true
