[package]
name = "macro_async_bench_complex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statig = { path = "../../../statig", features = ["async"] }
rand = { version = "0.8.5", features = ["small_rng"] }
futures = { version = "*" }
