[package]
name = "macro_async_blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statig = { path = "../../../statig", features = ["async"] }
futures = { version = "0.3.26" }
tokio = { version = "*", features = ["full"] }
