[package]
name = "mocking_demo"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
mockall_double = "0.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
statig = { path = "../../../statig", features = ["serde", "async"] }
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
mockall = "0.13.1"
rstest = "0.23.0"
